force-app/main/default/objects/Ticket__c/fields/Appointment_Description__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Description__c</fullName>
    <label>Appointment Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>