force-app/main/default/objects/Ticket__c/fields/Bug_ID__c.field-meta.xml
<CustomField>
    <fullName>Bug_ID__c</fullName>
    <label>Bug ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>