force-app/main/default/objects/Ticket__c/fields/Call_Later_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Later_Date__c</fullName>
    <label>Call Later Date</label>
    <type>Date</type>
</CustomField>