force-app/main/default/objects/Ticket__c/fields/Concern_Category__c.field-meta.xml
<CustomField>
    <fullName>Concern_Category__c</fullName>
    <label>Concern Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Plastics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>