force-app/main/default/objects/Ticket__c/fields/Concern_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Concern_Sub_Category__c</fullName>
    <label>Concern Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diagnosis</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>