force-app/main/default/objects/Ticket__c/fields/Customer_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Customer_Complaint__c</fullName>
    <label>Customer Complaint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>