force-app/main/default/objects/Ticket__c/fields/Date_of_Vehicle_Sale__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Vehicle_Sale__c</fullName>
    <formula>Job_Card__r.Vehicle__r.Purchased_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Vehicle Sale</label>
    <type>Date</type>
</CustomField>