force-app/main/default/objects/Ticket__c/fields/is_my_record__c.field-meta.xml
<CustomField>
    <fullName>is_my_record__c</fullName>
    <formula>POC_User__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is my record</label>
    <type>Checkbox</type>
</CustomField>