force-app/main/default/objects/Ticket__c/fields/Job_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Card_Number__c</fullName>
    <description>this feild  value is from its job card workordernumber</description>
    <formula>Job_Card__r.WorkOrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Job Card No</inlineHelpText>
    <label>Job Card Number</label>
    <type>Text</type>
</CustomField>