force-app/main/default/objects/Ticket__c/fields/Log_Data__c.field-meta.xml
<CustomField>
    <fullName>Log_Data__c</fullName>
    <label>Log Data</label>
    <type>Url</type>
</CustomField>