force-app/main/default/objects/Ticket__c/fields/Mode_of_Driving__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Driving__c</fullName>
    <label>Mode of Driving</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eco</fullName>
            </value>
            <value>
                <fullName>Ride</fullName>
            </value>
            <value>
                <fullName>Rush</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>