force-app/main/default/objects/Ticket__c/fields/Next_FollowUp_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_FollowUp_Date_Time__c</fullName>
    <label>Next FollowUp Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>