force-app/main/default/objects/Ticket__c/fields/Observation__c.field-meta.xml
<CustomField>
    <fullName>Observation__c</fullName>
    <label>Observation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>