force-app/main/default/objects/Ticket__c/fields/Odo_Meter_Reading__c.field-meta.xml
<CustomField>
    <fullName>Odo_Meter_Reading__c</fullName>
    <label>Odo Meter Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>