force-app/main/default/objects/Ticket__c/fields/POC_User__c.field-meta.xml
<CustomField>
    <fullName>POC_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>