force-app/main/default/objects/Ticket__c/fields/Post_Service_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Post_Service_Feedback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post Service Feedback</label>
    <referenceTo>Post_Service_Feedback__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>