force-app/main/default/objects/Ticket__c/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <label>Query</label>
    <type>TextArea</type>
</CustomField>