force-app/main/default/objects/Ticket__c/fields/Query_Type__c.field-meta.xml
<CustomField>
    <fullName>Query_Type__c</fullName>
    <label>Query Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
            <value>
                <fullName>Technical Issue</fullName>
            </value>
            <value>
                <fullName>Maintenance Request</fullName>
            </value>
            <value>
                <fullName>Service Request</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Installation Request</fullName>
            </value>
            <value>
                <fullName>Upgrade Request</fullName>
            </value>
            <value>
                <fullName>Configuration Help</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>