force-app/main/default/objects/Ticket__c/fields/Repeat_Failure__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Failure__c</fullName>
    <label>Repeat Failure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>