force-app/main/default/objects/Ticket__c/fields/Resolution_History__c.field-meta.xml
<CustomField>
    <fullName>Resolution_History__c</fullName>
    <label>Resolution History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>