force-app/main/default/objects/Ticket__c/fields/Resolution_Status__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Status__c</fullName>
    <label>Resolution Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Not Working</fullName>
            </value>
            <value>
                <fullName>Re Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>