force-app/main/default/objects/Ticket__c/fields/Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time__c</fullName>
    <label>Resolution Time</label>
    <type>DateTime</type>
</CustomField>