force-app/main/default/objects/Ticket__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complained Resolved via Explaination</fullName>
            </value>
            <value>
                <fullName>Call Later</fullName>
            </value>
            <value>
                <fullName>Appointment Requested</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Re Open</fullName>
            </value>
            <value>
                <fullName>POC Assigned</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Resolution Under Review</fullName>
            </value>
            <value>
                <fullName>Pending Rivision</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Solution not accepted</fullName>
            </value>
            <value>
                <fullName>NFA</fullName>
            </value>
            <value>
                <fullName>Call Back Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>