force-app/main/default/objects/Ticket__c/fields/SW_Version_of_VCU__c.field-meta.xml
<CustomField>
    <fullName>SW_Version_of_VCU__c</fullName>
    <label>SW Version of VCU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>