force-app/main/default/objects/Ticket__c/fields/Tech_Lead__c.field-meta.xml
<CustomField>
    <fullName>Tech_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tickets1</relationshipName>
    <type>Lookup</type>
</CustomField>