force-app/main/default/objects/Ticket__c/fields/Ticket_Age_Hours__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Age_Hours__c</fullName>
    <formula>( NOW() - CreatedDate ) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket Age Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>