force-app/main/default/objects/Ticket__c/fields/Ticket_Raised_By__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Raised_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket Raised By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>