force-app/main/default/objects/Ticket__c/fields/Type_of_Concern__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Concern__c</fullName>
    <label>Type of Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Known</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>