force-app/main/default/objects/Ticket__c/recordTypes/PSF_Ticket.recordType-meta.xml
<RecordType>
    <fullName>PSF_Ticket</fullName>
    <active>true</active>
    <label>PSF Ticket</label>
</RecordType>