force-app/main/default/objects/Ticket__c/recordTypes/Technical_Ticket.recordType-meta.xml
<RecordType>
    <fullName>Technical_Ticket</fullName>
    <active>true</active>
    <label>Technical Ticket</label>
</RecordType>