force-app/main/default/objects/Ticket__c/validationRules/Call_Later_should_not_be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Call_Later_should_not_be_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Call Later&quot;),
    ISBLANK(Call_Later_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Call_Later_Date__c</errorDisplayField>
    <errorMessage>Call Later Date must be filled in when Status is &apos;Call Later&apos;.</errorMessage>
</ValidationRule>