force-app/main/default/objects/Ticket__c/validationRules/Re_open_after_48_hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Re_open_after_48_hours</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Closed&quot;),
    Ticket_Age_Hours__c &gt; 48,
    NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Closed&quot;))
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You can not open ticket after 48 hours please Create New Ticket</errorMessage>
</ValidationRule>