force-app/main/default/objects/Ticket__c/validationRules/re_open_only_closed_ticket.validationRule-meta.xml
<ValidationRule>
    <fullName>re_open_only_closed_ticket</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Resolution_Status__c, &quot;Re Open&quot;),
  NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Closed&quot;))
)</errorConditionFormula>
    <errorDisplayField>Resolution_Status__c</errorDisplayField>
    <errorMessage>Only closed tickets can be re opened</errorMessage>
</ValidationRule>