force-app/main/default/objects/Ticket__c/validationRules/Resolution_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Closed&quot;),
    LEN(TRIM(Resolution__c)) = 0,
    $RecordType.DeveloperName = &quot;Technical_Ticket&quot;
)</errorConditionFormula>
    <errorDisplayField>Resolution__c</errorDisplayField>
    <errorMessage>Resolution is mandatory when Status is Closed for Technical Tickets.</errorMessage>
</ValidationRule>