force-app/main/default/objects/Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Card__c</columns>
    <columns>Post_Service_Feedback__c</columns>
    <columns>Service_Center__c</columns>
    <columns>Status__c</columns>
    <columns>Sub_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Ticket__c.Technical_Ticket</value>
    </filters>
    <label>All Tickets</label>
</ListView>