force-app/main/default/objects/Ticket__c/listViews/ASM_Queue_Ticket.listView-meta.xml
<ListView>
    <fullName>ASM_Queue_Ticket</fullName>
    <filterScope>Queue</filterScope>
    <label>ASM Queue</label>
    <queue>ASM_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>